--- a/apartaments.html
+++ b/apartaments.html
@@ -22,8 +22,8 @@
   <a href="capital.html">Основна<br> інформація</a>
     <a href="apartaments.html">Апартаменти</a>
     <a href="photos.html">Фотографії</a>
-  <a href="geo.html">Розташування</a> 
     <a href="city.html">Відео</a>
+    <a href="geo.html">Розташування</a> 
     <a href="contact.html">Контакти</a>
 </nav>
         
@@ -32,7 +32,7 @@
         <div>
 <h2>Апартаменти</h2>
 <p>
- Апартаменти Котеджів «Друзів» – це чудове місце, де Ви маєте можливість гарно провести час і набратися сил. Просторі світлі кімнати, максимум дерева в інтер’єрі, каміни та сучасна кухня - все тут зроблено для того, щоб Ваше перебування у нас було комфортне та незабутнє! Чекаємо Вас у гостіі!
+ Апартаменти Котеджів «Друзі» – це чудове місце, де Ви маєте можливість гарно провести час і набратися сил. Просторі світлі кімнати, максимум дерева в інтер’єрі, каміни та сучасна кухня - все тут зроблено для того, щоб Ваше перебування у нас було комфортне та незабутнє! Чекаємо Вас у гостіі!
 </p>   
 <p><u>✅Кухня та обідній зал (електрична плита, мікрохвильова піч, посудомийка, холодильник, електрочайник, посуд, стіл зі стільцями)</u><br>
 ✅<u>Вітальня з каміном (розкладний диван, телевізор, камін)</u><br>
