--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <a href="capital.html">Основна <br>інформація</a> 
     <a href="apartaments.html">Апартаменти</a>
     <a href="photos.html">Фотографії</a>
-  <a href="geo.html">Розташування</a> 
     <a href="city.html">Відео</a>
+    <a href="geo.html">Розташування</a> 
     <a href="contact.html">Контакти</a>
 </nav>
         <img class = " content2" src="mainphoto.jpg" alt="Котеджі Друзі" tabindex="0">
@@ -44,7 +44,7 @@
     
     <div>
 <h2>Котеджі "Друзі"</h2>
-<p><strong>Привіт всім👋🏽 А ви знали ,що у нас найкращий відпочинок в Буковелі? Наші котеджі здивують вас низькою ціною та хорошими умовами 👍🏽😍 А наший вигляд на гори закохає вас назавжди, ми вам це обіцяємо :)</strong></p>
+<p><strong>Привіт всім👋🏽 А ви знали ,що у нас найкращий відпочинок у Буковелі? Наші котеджі здивують вас низькою ціною та хорошими умовами 👍🏽😍 А наший вигляд на гори закохає вас назавжди, ми вам це обіцяємо :)</strong></p>
         
 <p><strong>Котеджі «Друзі» – це чудове місце, де Ви маєте можливість гарно провести час і набратися сил. Просторі світлі кімнати, максимум дерева в інтер’єрі, каміни та сучасна кухня - все тут зроблено для того, щоб Ваше перебування у нас було комфортне та незабутнє! Чекаємо Вас у гостіі!</strong></p>
 
