--- a/capital.html
+++ b/capital.html
@@ -22,8 +22,8 @@
   <a href="capital.html">Основна<br>  інформація</a> 
     <a href="apartaments.html">Апартаменти</a>
     <a href="photos.html">Фотографії</a>
-  <a href="geo.html">Розташування</a> 
     <a href="city.html">Відео</a>
+    <a href="geo.html">Розташування</a> 
     <a href="contact.html">Контакти</a>
 </nav>
 
@@ -42,7 +42,7 @@
 <p>✅На другому поверсі — 3 двомісні номери (у кожному є двоспальне ліжко, шафа для одягу, телевізор; у двох номерах є балкон; в одному санвузол — душова кабіна, туалет, умивальник, фен);
 санвузол (душова кабіна, туалет, умивальник, фен).</p></div>
    <div>     
-<p>✅Ми обладнали кухні у котеджах усім необхідним обладнанням для того, щоб Ви могли здивувати рідних та близьких своїми кулінарними навичками. У разі, якщо Ви не любите думати про готування на відпочинку – зверніться до нас і ми, за попередньою домовленістю, візьмемо все на себе. </p>
+<p>✅Ми обладнали кухні у котеджах усім необхідним для того, щоб Ви могли здивувати рідних та близьких своїми кулінарними навичками. У разі, якщо Ви не любите думати про готування на відпочинку – зверніться до нас і ми, за попередньою домовленістю, візьмемо все на себе. </p>
 <p>✅Можливість розміщення трьох дітей у котеджі без додаткового спального місця.
 Все зроблено для того, щоб Ваш відпочинок був максимально комфортним і якісним.
     <strong>Будемо раді Вас бачити!</strong></p>
